# hw3-calv2n

./: .gitignore  Makefile  README.md  ai_documentation.txt  environment.yml  myst.yml
data/: GW150914_data.csv
ligotools/: pyproject.toml
ligotools/ligotools/: __init__.py  utils.py
ligotools/ligotools.egg-info/: PKG-INFO
ligotools/ligotools/tests/: test_readligo.py  test_utils.py
ligotools/ligotools/tests/data/: gravitational_wave_data.pkl
